--- a/ZKP_protocol.ipynb
+++ b/ZKP_protocol.ipynb
@@ -42,7 +42,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "WsoQL1CPXHNp"
       },
@@ -53,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -92,7 +92,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "s40FvbtQ_z8M"
       },
@@ -222,7 +222,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -273,7 +273,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "oW38im8Su_p2"
       },
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "XZ_rlGX-XQHa"
       },
@@ -442,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "id": "yYG_7kakYURI"
       },
@@ -530,7 +530,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -593,7 +593,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -658,7 +658,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "id": "TIfSrN_TNaRs"
       },
@@ -771,7 +771,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -814,7 +814,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -920,7 +920,7 @@
         "\n",
         "    def test_06(self):\n",
         "      \"\"\"|\n",
-        "      it conductes a few checks related with the generation of challenges\n",
+        "      it performs a few checks related with the generation of challenges\n",
         "      \"\"\"\n",
         "      peggy = Peggy('peggy',pinfo)\n",
         "      kevin = Kevin(pinfo,[peggy])\n",
